--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.5.0",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "@pancakeswap/sdk": "^3.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "^7.32.0",
+    "prettier": "latest",
+    "typescript": "^4.5.3",
     "@types/jest": "^29.2.0",
     "ts-jest": "^29.0.3",
-    "jest": "^29.2.1",
-    "typescript": "^4.5.3"
+    "jest": "^29.2.1"
   }
 }
