--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "start": "tsc && node ./build/server.js",
     "start:dev": "nodemon src/server.ts",
     "lint": "tsc --noEmit && TIMING=1 eslint src/**/*.ts* --fix",
-    "test": "NODE_ENV=test jest --verbose --runInBand"
+    "test": "NODE_ENV=test jest --verbose --runInBand",
+    "typechain": "typechain --out-dir src/abi/types --target=ethers-v5 \"src/abi/*.json\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "ethers": "^5.7.2",
     "graphql": "^15.5.0",
     "graphql-request": "^3.5.0",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
-    "@pancakeswap/sdk": "^3.0.0"
+    "@pancakeswap/sdk": "^3.0.0",
+    "typechain": "^7.0.0"
   },
   "devDependencies": {
+    "@typechain/ethers-v5": "^9.0.0",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
