--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "graphql-request": "^3.5.0",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
+    "lodash": "^4.17.21",
     "@pancakeswap/sdk": "^3.0.0",
     "typechain": "^7.0.0"
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "eslint": "^7.32.0",
